--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -10,8 +10,10 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
 WORKDIR /app
 
 # Install Python deps (cached layer)
+# Install CPU-only PyTorch first (saves ~1.5GB vs default CUDA build)
 COPY requirements.txt .
-RUN pip install --no-cache-dir -r requirements.txt
+RUN pip install --no-cache-dir torch --index-url https://download.pytorch.org/whl/cpu && \
+    pip install --no-cache-dir -r requirements.txt
 
 # Copy app code
 COPY . .
